updates to configs and lambda functions
